--- a/Sparc2/Sparc2/Donations/AddDonation.razor.css
+++ b/Sparc2/Sparc2/Donations/AddDonation.razor.css
@@ -1,30 +1,46 @@
-﻿div {
+﻿form label {
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: -0.12px;
+}
+form button {
+  height: 40px;
+  padding: 8px 16px 8px 14px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+form button.selected {
+  box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
+  border-color: var(--purple-900);
+  color: var(--purple-900);
+}
+form button.selected ::deep svg path {
+  stroke: var(--purple-900);
+}
+
+.donation-form {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.donation-form ::deep form {
+  width: 100%;
+  height: fit-content;
+  margin: auto 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.donation-form ::deep form input {
+  width: calc(100% - 24px);
+}
+
+.field-group {
   display: flex;
   flex-direction: column;
   gap: 8px;
-}
-div h2 {
-  color: var(--gray-900);
-  font-size: 2.133rem;
-  font-weight: 600;
-  line-height: 110%;
-  letter-spacing: -0.427px;
-}
-div h2:last-of-type {
-  margin-bottom: 24px;
-}
-
-p {
-  color: var(--gray-600);
-  font-size: 1.4rem;
-  font-weight: 450;
-  line-height: 120%;
-  margin-bottom: 24px;
-}
-
-.field-group:first-of-type {
-  margin-bottom: 24px;
-  margin-top: 30px;
 }
 
 .btn-group {
@@ -38,38 +54,6 @@ p {
   display: flex;
   gap: 4px;
   align-items: center;
-}
-.btn-group ::deep svg path {
-  stroke: var(--gray-600);
-}
-
-label {
-  font-size: 1.2rem;
-  font-weight: 600;
-  letter-spacing: -0.12px;
-}
-
-button {
-  height: 40px;
-  padding: 8px 16px 8px 14px;
-  border-radius: 20px;
-  border: 1px solid var(--gray-100);
-  background: var(--yellow-50);
-  cursor: pointer;
-  color: var(--gray-600);
-  font-weight: 600;
-  font-size: 16px;
-}
-button:hover {
-  border-color: var(--purple-800);
-}
-button.selected {
-  box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
-  border-color: var(--purple-900);
-  color: var(--purple-900);
-}
-button.selected ::deep svg path {
-  stroke: var(--purple-900);
 }
 
 .amount-grid {
@@ -155,13 +139,13 @@ button.selected ::deep svg path {
 .payment-form label:last-of-type {
   margin-bottom: 0;
 }
-.payment-form div {
+.payment-form .expiration {
   display: flex;
   gap: 12px;
   flex-direction: row;
   width: 100%;
 }
-.payment-form div label {
+.payment-form .expiration label {
   flex: 1;
   min-width: 0;
 }
