--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor.css
@@ -8,20 +8,11 @@
   background: var(--yellow-50);
   box-shadow: 4px 4px 16px rgba(63, 24, 5, 0.25);
 }
-.add-card .progress-bar {
-  height: 2px;
-  background: var(--purple-100);
-  margin: 24px 0;
-}
-.add-card .progress-bar .progress {
-  height: 2px;
-  background: var(--purple-800);
-}
-.add-card header {
+.add-card .card-nav {
   display: flex;
   gap: 5px;
 }
-.add-card header button {
+.add-card .card-nav button {
   height: 32px;
   padding: 3px 12px 3px 10px;
   display: flex;
@@ -35,62 +26,59 @@
   cursor: pointer;
   opacity: 0.6;
 }
-.add-card header button.active {
+.add-card .card-nav button.active {
   box-shadow: 0 0 8px rgba(178, 116, 250, 0.25);
   color: var(--purple-800);
   opacity: unset;
 }
-.add-card header button:first-of-type ::deep svg path {
+.add-card .card-nav button:first-of-type ::deep svg path {
   stroke: var(--gray-600);
 }
-.add-card header button:first-of-type.active ::deep svg path {
+.add-card .card-nav button:first-of-type.active ::deep svg path {
   stroke: var(--purple-800);
 }
-.add-card header button:last-of-type ::deep svg path {
+.add-card .card-nav button:last-of-type ::deep svg path {
   fill: var(--gray-600);
 }
-.add-card header button:last-of-type.active ::deep svg path {
+.add-card .card-nav button:last-of-type.active ::deep svg path {
   fill: var(--purple-800);
+}
+.add-card .progress-bar {
+  height: 2px;
+  background: var(--purple-100);
+  margin: 24px 0;
+}
+.add-card .progress-bar .progress {
+  height: 2px;
+  background: var(--purple-800);
+}
+.add-card ::deep header {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.add-card ::deep header h2 {
+  color: var(--gray-900);
+  font-size: 2.133rem;
+  font-weight: 600;
+  letter-spacing: -0.427px;
+}
+.add-card ::deep header p {
+  color: var(--gray-600);
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: normal;
 }
 .add-card section {
   display: flex;
   flex-direction: column;
   flex: 1;
   max-height: 448px;
+  gap: 24px;
 }
 .add-card footer {
   display: flex;
   justify-content: space-between;
   margin-top: 34px;
-  /*button {
-      height: 40px;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 20px;
-      font-size: 16px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: .2s all ease-in-out;
-      border: 1px solid transparent;
-      background: none;
-
-      &:active {
-          border-color: var(--gray-100);
-      }
-
-      &:first-of-type {
-          color: var(--purple-800);
-
-          &:hover {
-              border-color: var(--purple-800);
-          }
-      }
-
-      &:last-of-type {
-          color: var(--yellow-50);
-          background: var(--purple-800);
-      }
-  }*/
 }
