--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -11,6 +11,7 @@ nav .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 8px;
 }
 nav .right {
   display: flex;
@@ -52,7 +53,7 @@ nav button {
   flex-grow: 1;
 }
 .other-nav .center input {
-  width: 95%;
+  width: 100%;
   height: 16px;
   padding: 8px 16px;
   background: transparent;
@@ -102,17 +103,4 @@ nav button {
 }
 .other-nav button.add-btn:active {
   transform: translatey(1px) scale(99%);
-}
-
-.addCard-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  backdrop-filter: blur(6px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
 }
