--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -11,6 +11,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 8px;
     }
 
     .right {
@@ -61,7 +62,7 @@
         flex-grow: 1;
 
         input {
-            width: 95%;
+            width: 100%;
             height: 16px;
             padding: 8px 16px;
             background: transparent;
@@ -124,17 +125,3 @@
         }
     }
 }
-
-.addCard-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    backdrop-filter: blur(6px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
