--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -54,9 +54,9 @@
             ShowAddCard = false;
     }
 
-    // private void CancellAddCard()
+    // private void CancelAddCard()
     // {
-    //     If
+    //     
     // }
 }
 
