--- a/Sparc2/Sparc2/Ideas/AddIdea.razor.css
+++ b/Sparc2/Sparc2/Ideas/AddIdea.razor.css
@@ -66,7 +66,7 @@ form section:first-of-type div div {
   align-items: center;
   justify-content: center;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 1.4rem;
   font-weight: 600;
   border: 1px solid var(--purple-800);
   border-radius: 20px;
