--- a/Sparc2/Sparc2/Ideas/AddIdea.razor.scss
+++ b/Sparc2/Sparc2/Ideas/AddIdea.razor.scss
@@ -78,7 +78,7 @@ form {
                 align-items: center;
                 justify-content: center;
                 padding: 10px 20px;
-                font-size: 16px;
+                font-size: 1.4rem;
                 font-weight: 600;
                 border: 1px solid var(--purple-800);
                 border-radius: 20px;
