--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor
@@ -24,7 +24,7 @@
         }
         else
         {
-                <AddDonation CurrentStep="@CurrentStep" EditContext="@editContext" />
+                <AddDonation CurrentStep="@CurrentStep"  />
         }
     </section>
 
