--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 100;
     margin: 32px 60px;
 
     .container {
@@ -108,19 +108,33 @@
         &.add-btn {
             background: var(--yellow-50);
             border-radius: 20px;
-            transition: 0.2s all ease-in-out;
+            transition: 0.1s all ease-in-out;
 
             span {
                 color: var(--purple-800);
             }
 
             &:hover {
-                border: 1px solid transparent;
-                background: rgba(255, 252, 246, 0.8);
+                color: var(--purple-800);
+                transform: scale(103%);
+
+                > svg path {
+                    stroke: var(--purple-800);
+                }
             }
 
             &:active {
-                transform: translatey(1px) scale(99%);
+                color: var(--purple-900);
+                transform: scale(1);
+
+                > svg path {
+                    stroke: var(--purple-900);
+                }
+            }
+
+            &:disabled {
+                border: 1px solid transparent;
+                opacity: 0.5;
             }
         }
     }
