--- a/Sparc2/Sparc2/Html.razor.scss
+++ b/Sparc2/Sparc2/Html.razor.scss
@@ -217,6 +217,15 @@ ul {
     }
 }
 
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 300;
+    box-shadow: 4px 4px 16px 0px rgba(63, 24, 5, 0.25);
+}
+
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -228,7 +237,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 200;
 }
 
 /*
