--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -225,6 +225,15 @@ ul li {
   margin: 0;
 }
 
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 300;
+  box-shadow: 4px 4px 16px 0px rgba(63, 24, 5, 0.25);
+}
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -236,7 +245,7 @@ ul li {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 200;
 }
 
 /*
