--- a/Sparc2/Sparc2/Ideas/AddIdea.razor.css
+++ b/Sparc2/Sparc2/Ideas/AddIdea.razor.css
@@ -13,9 +13,16 @@ form label span {
   font-size: 1.2rem;
   font-weight: 600;
   letter-spacing: -0.12px;
+  display: flex;
+}
+form label span ::deep .validation-message {
+  color: var(--red);
+  font-weight: 500;
+  margin-left: 15px;
 }
 form label .required {
   color: var(--red);
+  margin-left: 2px;
 }
 form label ::deep input, form label ::deep textarea {
   border-radius: 16px;
@@ -33,6 +40,9 @@ form label ::deep textarea {
   padding: 16px;
   height: 149px;
   resize: none;
+}
+form label ::deep input.invalid {
+  border-color: var(--red);
 }
 form label:last-of-type {
   margin-bottom: 0;
