--- a/Sparc2/Sparc2/Ideas/IdeaCardFull.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaCardFull.razor.css
@@ -1,4 +1,9 @@
 ﻿.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1001;
   width: 501px;
   height: fit-content;
   max-height: 732px;
